jwt implementations and debugging of nodejs

--- a/api/config.env
+++ b/api/config.env
@@ -1,4 +1,10 @@
+NODE_ENV=development
 
 #! DB SETUP
 DATABASE=mongodb+srv://ozguripekci:<PASSWORD>@cluster0.udr9lhx.mongodb.net/test
 DATABASE_PASSWORD=Simurg18
+
+#! JWT Implementation
+JWT_SECRET=qwertyuiopasdfghjklzxcvbnm123456
+JWT_EXPIRES_IN=90d
+JWT_COOKIE_EXPIRES_IN=90
