--- a/api/config.env
+++ b/api/config.env
@@ -8,3 +8,11 @@ DATABASE_PASSWORD=Simurg18
 JWT_SECRET=qwertyuiopasdfghjklzxcvbnm123456
 JWT_EXPIRES_IN=90d
 JWT_COOKIE_EXPIRES_IN=90
+
+#! Email verification for sending emails and to reset password.
+EMAIL_USERNAME=ad95a8d6645843
+EMAIL_PASSWORD=fe35faf0711db9
+EMAIL_HOST=smtp.mailtrap.io
+EMAIL_PORT = 25
+
+EMAIL_FROM=ozgur@gmail.com
