--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "SET NODE_ENV=development && nodemon index.js",
+    "start": "SET NODE_ENV=development && nodemon server.js",
     "start:prod": "set NODE_ENV=production && nodemon server.js"
   },
   "author": "",
@@ -17,7 +17,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-mongo-sanitize": "^2.2.0",
-    "express-rate-limit": "^6.6.0",
+    "express-rate-limit": "^6.7.0",
     "helmet": "^6.0.0",
     "hpp": "^0.2.3",
     "html-to-text": "^8.2.1",
