--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-rating": "^2.0.5",
     "react-router-dom": "5",
     "react-scripts": "5.0.1",
+    "sass": "^1.56.1",
     "socket.io-client": "^4.5.3",
     "timeago.js": "^4.0.2",
     "web-vitals": "^2.1.4"
