--- a/client/package.json
+++ b/client/package.json
@@ -11,11 +11,15 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
     "cors": "^2.8.5",
+    "deck.gl": "^8.8.20",
     "mapbox-gl": "^2.11.1",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-map-gl": "^7.0.20",
+    "react-map-gl-geocoder": "^2.2.0",
+    "react-mapbox-gl": "^5.1.1",
     "react-rating": "^2.0.5",
     "react-router-dom": "5",
     "react-scripts": "5.0.1",
